# CrossHair

./: .dockerignore  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  README.md  additional-verbs-in-imperative-mood.txt  asthelpers.py  asthelpers_test.py  check.py  check_help_in_doc.py  check_init_and_setup_coincide.py  conftest.py  crosshair.py  crosshairlib.py  crosshairlib_test.py  func.py  precommit.py  prooforacle.py  prooforacle_test.py  pyproject.toml  requirements-doc.txt  setup.cfg  setup.py  test00.py  test01.py  test02.py  test_booleans.py  test_equality.py  test_get.py  test_map.py  test_range.py  test_strings.py  test_tuples.py  (+1 more)
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  install-crosshair.sh  post-create.sh  switch-python.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_documentation.yml  build_pyodide.yml  build_wheels.yml  buildwheels.yml  check-commit-messages-in-push.yml  check-pull-request-title-and-description.yml  check.yml  publish-to-pypi.yml  pyodide.yml  test_crosshair.yml  test_hypothesis.yml  test_hypothesis_integration.yml
crosshair/: __init__.py  __main__.py  _mark_stacks.h  _preliminaries_test.py  _preliminary_tests.py  _tracers.c  _tracers.h  _tracers_test.py  abcstring.py  analysis_server.py  asthelpers.py  asthelpers_test.py  auditwall.py  auditwall_test.py  base.py  behavior_compare.py  behavior_compare_test.py  behavior_diff.py  behavior_diff_test.py  builtinslib.py  check.py  check_examples_test.py  codeconfig.py  codeconfig_test.py  condition_parser.py  condition_parser_test.py  conftest.py  contracted_builtins.py  copyext.py  copyext_test.py  core.py  core_and_libs.py  core_regestered_types_test.py  core_test.py  diff_behavior.py  diff_behavior_test.py  doctests_test.py  dynamic_typing.py  dynamic_typing_test.py  enforce.py  (+61 more)
crosshair/examples/: arith.py  check_examples_test.py  chess.py  getattr_magic.py  hash_consistent_with_equals.py  immutable_class.py  nesting_inference.py  numpy_examples.py  rolling_average.py  showcase.py  tic_tac_toe.py
crosshair/examples/PEP316/: __init__.py
crosshair/examples/PEP316/bugs_detected/: getattr_magic.out  getattr_magic.py  hash_consistent_with_equals.out  hash_consistent_with_equals.py  shopping_cart.out  shopping_cart.py  showcase.out  showcase.py
crosshair/examples/PEP316/bugs_detected_fast/: getattr_magic.out  hash_consistent_with_equals.out  hash_consistent_with_equals.py  showcase.out  showcase.py
crosshair/examples/PEP316/bugs_detected_slow/: tic_tac_toe.py
crosshair/examples/PEP316/correct_code/: arith.py  chess.py  immutable_class.py  nesting_inference.py  numpy_examples.py  rolling_average.py  showcase.py
crosshair/examples/deal/: __init__.py
crosshair/examples/deal/bugs_detected/: choice.out  choice.py  list_to_dict.out  list_to_dict.py
crosshair/examples/deal/correct_code/: average.py
crosshair/examples/hypothesis/: __init__.py
crosshair/examples/hypothesis/bugs_detected/: simple_strategies.out  simple_strategies.py
crosshair/examples/icontract/: __init__.py
crosshair/examples/icontract/bugs_detected/: showcase.out  showcase.py  wrong_sign.out  wrong_sign.py
crosshair/examples/icontract/correct_code/: arith.py  showcase.py
crosshair/libimpl/: __init__.py  arraylib.py  base64_ch_test.py  binascii_ch_test.py  binascii_test.py  binasciilib.py  bisectlib_test.py  builtinslib.py  builtinslib_ch_test.py  builtinslib_chtest.py  builtinslib_test.py  codecslib.py  codecslib_test.py  collectionslib.py  collectionslib_ch_test.py  collectionslib_test.py  copylib.py  copylib_test.py  datetimelib.py  datetimelib_ch_test.py  datetimelib_test.py  decimallib.py  decimallib_ch_test.py  decimallib_test.py  encodings_ch_test.py  fractionlib.py  fractionlib_test.py  functoolslib.py  functoolslib_test.py  gzip_test.py  hashliblib.py  hashliblib_test.py  heapqlib.py  heapqlib_test.py  importliblib.py  importliblib_test.py  inspectliblib_test.py  iolib.py  iolib_ch_test.py  iolib_test.py  (+34 more)
crosshair/libimpl/encodings/: __init__.py  _encutil.py  ascii.py  latin_1.py  utf_8.py
crosshair/tools/: check_help_in_doc.py  check_init_and_setup_coincide.py  demo_overrides.py  demo_overrides_test.py  fetch_corpus.py  generate_demo_table.py  generate_treemap.py  measure_support.py  measure_support_test.py  mine_usage.py
doc/: analysis_kind_asserts.md  analysis_kind_icontract.md  analysis_kind_pep316.md  assert_contracts.md  contributing.md  contributing_to_docs.md  diff_behavior.md  how.md  icontract.md
doc/source/: case_studies.rst  changelog.rst  command-line_interface.rst  conf.py  contracts.rst  contributing.rst  contributors.rst  cover.rst  crosshair.rst  diff_behavior.rst  get_started.rst  hints_for_your_classes.rst  how_can_i_help.rst  how_does_it_work.rst  ide_integrations.rst  index.rst  introduction.rst  kinds_of_contracts.rst  limitations.rst  measured.json  plugins.rst  related_work.rst  support_matrix.rst  usage_prior.json  what_code_is_analyzed.rst  why_should_i_use_crosshair.rst
