[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crosshair-tool"
version = "0.0.105"
description = "Analyze Python code for correctness using symbolic execution."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Phillip Schanely", email = "pschanely+vE7F@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "packaging",
    "typing-inspect>=0.7.1",
    "typing_extensions>=3.10.0",
    "z3-solver>=4.13.0.0",
    "importlib_metadata>=4.0.0",
    "pygls>=1.0.0",
    "typeshed-client>=2.0.5",
]

[project.optional-dependencies]
dev = [
    "autodocsumm>=0.2.2,<1",
    "black==25.9.0",  # sync this with .pre-commit-config.yaml
    "deal>=4.13.0",
    "icontract>=2.4.0",
    "isort==5.11.5",  # sync this with .pre-commit-config.yaml
    "mypy==1.18.1",  # sync this with .pre-commit-config.yaml
    "numpy==1.24.0; python_version < '3.12'",
    "numpy==2.3.3; python_version >= '3.12'",
    "pre-commit~=2.20",
    "pytest==8.3.5",
    "pytest-xdist==3.8.0",
    "setuptools",
    "sphinx>=3.4.3",
    "sphinx-rtd-theme>=0.5.1",
    "rst2pdf>=0.102",
    "z3-solver==4.15.4.0",
]

[project.urls]
Homepage = "https://github.com/pschanely/CrossHair"

[project.scripts]
crosshair = "crosshair.main:main"
mypycrosshair = "crosshair.main:mypy_and_check"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
crosshair = ["*.h", "py.typed"]

[[tool.setuptools.ext-modules]]
name = "_crosshair_tracers"
sources = ["crosshair/_tracers.c"]
