[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crosshair-tool"
version = "0.0.108"
description = "Analyze Python code for correctness using symbolic execution."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Phillip Schanely", email = "pschanely+vE7F@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "packaging",
    "typing-inspect>=0.7.1",
    "typing_extensions>=3.10.0",
    "z3-solver>=4.13.0.0",
    "importlib_metadata>=4.0.0",
    "pygls>=1.0.0",
    "typeshed-client>=2.0.5",
]

[project.optional-dependencies]
# NOTE: the runtime package still supports Python >=3.8, but the dev tooling
# below (black, isort, mypy, pytest) requires >=3.10, so contributing to
# CrossHair requires Python 3.10 or newer.
dev = [
    "autodocsumm>=0.2.2,<1",
    "black==26.5.1",  # sync this with .pre-commit-config.yaml
    "deal>=4.13.0",
    "hypothesis>=6.0.0",  # input generation for crosshair.inputgen / fuzz_core_test
    "icontract>=2.4.0",
    "isort==8.0.1",  # sync this with .pre-commit-config.yaml
    "mypy==2.1.0",  # sync this with .pre-commit-config.yaml
    "numpy==1.24.0; python_version < '3.12'",
    "numpy==2.3.3; python_version >= '3.12'",
    "pre-commit~=4.3",
    "pytest==9.1.1",
    "pytest-xdist==3.8.0",
    "setuptools",
    "sphinx>=3.4.3",
    "sphinx-rtd-theme>=0.5.1",
    "rst2pdf>=0.102",
    "z3-solver==5.0.0.0",
]

[project.urls]
Homepage = "https://github.com/pschanely/CrossHair"

[project.scripts]
crosshair = "crosshair.main:main"
mypycrosshair = "crosshair.main:mypy_and_check"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
crosshair = ["*.h", "py.typed"]

[[tool.setuptools.ext-modules]]
name = "_crosshair_tracers"
sources = ["crosshair/_tracers.c"]

[tool.flake8]
select = ["E7", "E9", "F60", "F63", "F7", "F82"]
# D202 - conflicts with black
# E704 - conflicts with black
# E721 - allow type comparisons with equality
# E731 - allow assignment to lambdas
extend-ignore = ["D202", "E704", "E721", "E731"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "crosshair.tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pygls.*"
ignore_missing_imports = true

[tool.pydocstyle]
ignore = "D1,D203,D200,D205,D212,D400,D401,D402,D403,D415"
match = ".*(?<!_test).py$"

[tool.pytest.ini_options]
python_files = ["*_test.py"]
addopts = "--tb=native --assert=plain -p no:hypothesispytest"
faulthandler_timeout = 600
markers = [
    "demo: mark a test to show as an example for end users",
    "smoke: mark a test to use for quick testing or per-wheel testing",
]
